# chronowave-studio

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
docs/checklists/: CHECKLIST_IA.md
docs/planes/: 2026-05-29-plan-maestro-chronowave-studio.md
docs/reportes/: 2026-05-29-0952_codex_docs_publicacion-inicial.md  2026-05-29-1003_codex_infra_visibilidad-publica.md  2026-05-29-2118_codex_mixto_base-flutter-rust.md  2026-05-29-2123_codex_infra_pr-base-flutter-rust.md  2026-05-30-1144_codex_frontend_shell-fase1.md  2026-05-30-2216_antigravity_frontend-core-database_stitch-fase1-sqlite-tests.md  2026-05-30-2325_antigravity_docs_consenso-ia.md  2026-05-31-2152_codex_mixto_ffi-timeline-snapshot.md  2026-05-31-2231_codex_infra_toolchain-android-rust.md  2026-05-31-2320_antigravity_docs-infra_formato-integrantes-y-fusion-codex.md  2026-05-31-2325_antigravity_docs_regla-subida-automatica-docs.md  2026-06-01-2043_codex_frontend_editor-trim-split.md  2026-06-01-2050_codex_infra_android-ffi-packaging.md  2026-06-01-2122_codex_infra_pr-android-ffi.md  2026-06-01-2131_codex_infra_actualiza-pr-main.md  2026-06-01-2152_antigravity_docs_correccion-integrante-reportes.md  2026-06-02-1215_codex_mixto_android-ffi-gstreamer-diagnostico.md  (+18 more)
integration_test/: ffi_device_test.dart
lib/: main.dart
rust/: Cargo.toml
rust/chronowave_core/: Cargo.toml
rust/chronowave_core/src/: lib.rs
rust/chronowave_core/tests/: core_smoke_test.rs
tooling/: gstreamer_windows_preflight.ps1  run_preflight.ps1  setup_env.ps1  setup_gstreamer.ps1
(+19 files in other folders)
